<resources>
    <string name="app_name">AutoTracker</string>
    <string name="device_id">Device ID</string>
    <string name="start">Start</string>
    <string name="Speed">Speed</string>
    <string name="RPM">RPM</string>
    <string name="kmh">kmh</string>
    <string name="mph">mph</string>
    <string name="rpm_reading">%1$s\nRPM</string>
    <string name="Email_Address">Email Address</string>
    <string name="password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_created">Account Created</string>
    <string name="failed_to_create_account">Failed to create account</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
</resources>
