<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five"
        android:layout_marginStart="@dimen/one"
        android:layout_marginEnd="@dimen/one"
        android:textSize="34sp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="@dimen/six"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/three"
        android:layout_marginStart="@dimen/one"
        android:layout_marginEnd="@dimen/one"
        android:inputType="textEmailAddress"
        android:hint="@string/Email_Address"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/six"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/one"
        android:layout_marginStart="@dimen/one"
        android:layout_marginEnd="@dimen/one"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/device_id_edit_text"
        android:layout_width="@dimen/six"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/one"
        android:layout_marginEnd="@dimen/one"
        android:layout_marginTop="@dimen/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:hint="@string/device_id"
        android:inputType="number"
        android:visibility="invisible"/>

    <Switch
        android:id="@+id/sign_up_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/device_id_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/one"
        android:text="@string/Log_In"
        android:checked="false"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="@dimen/five"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_switch"
        android:layout_marginStart="@dimen/one"
        android:layout_marginEnd="@dimen/one"
        android:layout_marginTop="@dimen/three"
        android:enabled="false"/>

</android.support.constraint.ConstraintLayout>